--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -38,9 +38,11 @@
 +Profiles=(Name="Projectile",CollisionEnabled=QueryOnly,bCanModify=True,ObjectTypeName="Projectile",CustomResponses=,HelpMessage="Preset for projectiles")
 +Profiles=(Name="Floor",CollisionEnabled=NoCollision,bCanModify=True,ObjectTypeName="",CustomResponses=,HelpMessage="Needs description")
 +Profiles=(Name="Floor2",CollisionEnabled=NoCollision,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="Floor",Response=ECR_Overlap)),HelpMessage="Needs description")
++Profiles=(Name="Char",CollisionEnabled=NoCollision,bCanModify=True,ObjectTypeName="",CustomResponses=((Channel="Projectile",Response=ECR_Overlap)),HelpMessage="Needs description")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Projectile")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel2,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Floor")
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel3,DefaultResponse=ECR_Block,bTraceType=True,bStaticObject=False,Name="Floor2")
++DefaultChannelResponses=(Channel=ECC_GameTraceChannel4,DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False,Name="Char")
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel="Projectile",Response=ECR_Ignore)))
 -ProfileRedirects=(OldName="BlockingVolume",NewName="InvisibleWall")
 -ProfileRedirects=(OldName="InterpActor",NewName="IgnoreOnlyPawn")
